removed unused imports, refactored some controller tests